tests/fixtures/errors/numconvert_const.z
# static (compile-time) checks on constant numeric conversions
main: function is {
    a: 300.u8
    b: 3.5.u8
    c: 16777217.f32
    d: 0.1.f32
    print "\{a} \{b} \{c} \{d}"
}
